; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_time.c_jiffies_to_timeval.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_time.c_jiffies_to_timeval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i32 }

@TICK_NSEC = common dso_local global i32 0, align 4
@NSEC_PER_SEC = common dso_local global i32 0, align 4
@NSEC_PER_USEC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @jiffies_to_timeval(i64 %0, %struct.timeval* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.timeval*, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store %struct.timeval* %1, %struct.timeval** %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = trunc i64 %6 to i32
  %8 = load i32, i32* @TICK_NSEC, align 4
  %9 = mul nsw i32 %7, %8
  %10 = load i32, i32* @NSEC_PER_SEC, align 4
  %11 = call i32 @div_u64_rem(i32 %9, i32 %10, i32* %5)
  %12 = load %struct.timeval*, %struct.timeval** %4, align 8
  %13 = getelementptr inbounds %struct.timeval, %struct.timeval* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @NSEC_PER_USEC, align 4
  %16 = sdiv i32 %14, %15
  %17 = load %struct.timeval*, %struct.timeval** %4, align 8
  %18 = getelementptr inbounds %struct.timeval, %struct.timeval* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  ret void
}

declare dso_local i32 @div_u64_rem(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
